# izwi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml
.github/workflows/: release.yml
crates/izwi-core/: Cargo.toml
crates/izwi-core/examples/: lfm2_native_smoke.rs
crates/izwi-core/src/: config.rs  lib.rs  tokenizer.rs
crates/izwi-core/src/audio/: preprocessing.rs
crates/izwi-core/src/backends/: mod.rs
crates/izwi-core/src/catalog/: mod.rs  variant.rs
crates/izwi-core/src/codecs/: mod.rs
crates/izwi-core/src/engine/: config.rs  core.rs  executor.rs  kv_cache.rs  metrics.rs  mod.rs  output.rs  request.rs  scheduler.rs  signal_frontend.rs  types.rs
crates/izwi-core/src/families/: mod.rs
crates/izwi-core/src/inference/: engine.rs  generation.rs  lfm2_bridge.rs  mod.rs  python_bridge.rs
crates/izwi-core/src/model/: download.rs  info.rs  manager.rs
crates/izwi-core/src/models/: gemma3_chat.rs  gguf_loader.rs  metal_memory.rs  mlx_compat.rs  mod.rs  qwen3.rs  registry.rs
crates/izwi-core/src/models/architectures/: mod.rs
crates/izwi-core/src/models/architectures/gemma3/: chat.rs  mod.rs
crates/izwi-core/src/models/architectures/lfm2/: mod.rs
crates/izwi-core/src/models/architectures/lfm2/audio/: audio_detokenizer.rs  config.rs  depthformer.rs  lfm_backbone.rs  mimi_decoder.rs  preprocessor.rs
crates/izwi-core/src/models/architectures/parakeet/: mod.rs
crates/izwi-core/src/models/architectures/parakeet/asr/: mod.rs  nemo.rs  preprocessor.rs
crates/izwi-core/src/models/architectures/qwen3/: chat.rs  core.rs  mod.rs
crates/izwi-core/src/models/architectures/qwen3/asr/: audio.rs  config.rs  mod.rs  tokenizer.rs
crates/izwi-core/src/models/architectures/qwen3/tts/: mod.rs  predictor.rs  speech_tokenizer.rs  talker.rs
crates/izwi-core/src/models/architectures/voxtral/: lm.rs  mod.rs
crates/izwi-core/src/models/architectures/voxtral/realtime/: audio.rs  config.rs  mod.rs  model.rs  tokenizer.rs
crates/izwi-core/src/models/lfm2_audio/: audio_detokenizer.rs  conformer.rs  depthformer.rs  lfm_backbone.rs  mimi_decoder.rs  mod.rs  preprocessor.rs  tokenizer.rs
crates/izwi-core/src/models/parakeet_asr/: decode.rs  mod.rs
crates/izwi-core/src/models/qwen3_asr/: audio.rs  config.rs  mod.rs  tokenizer.rs
crates/izwi-core/src/models/qwen3_tts/: config.rs  mod.rs  predictor.rs  speech_tokenizer.rs  talker.rs  tokenizer.rs
crates/izwi-core/src/models/shared/: chat.rs  device.rs  mod.rs
crates/izwi-core/src/models/shared/attention/: batched.rs  mod.rs
crates/izwi-core/src/models/shared/memory/: metal.rs  mod.rs
crates/izwi-core/src/models/shared/weights/: gguf.rs  mlx.rs  mod.rs
crates/izwi-core/src/models/voxtral/: config.rs  model.rs  streaming.rs  tokenizer.rs
crates/izwi-core/src/runtime/: asr.rs  audio_io.rs  chat.rs  lfm2.rs  mod.rs  model_router.rs  service.rs  tts.rs  tts_batcher.rs  types.rs
crates/izwi-desktop/: tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
data/: test.md
docs/: INFERENCE_ENGINE_ARCHITECTURE.md  MACOS.md  PRODUCTION_READINESS_ANALYSIS.md  RELEASING.md
docs/user/: manual-gemma-3-1b-download.md
scripts/: dev.sh  lfm2_daemon.py  qwen3_asr_daemon.py  requirements.txt  tts_daemon.py  tts_inference.py  uninstall-macos.sh
ui/: index.html  package.json
(+61 files in other folders)
