[workspace]
resolver = "2"
members = [
    "crates/izwi-core",
    "crates/izwi-server",
    "crates/izwi-cli",
    "crates/izwi-desktop",
]

[workspace.package]
version = "0.1.0-alpha-8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agentem-ai/izwi"
authors = ["Agentem <info@agentem.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Model loading
hf-hub = "0.3"
safetensors = "0.4"
tokenizers = "0.22.2"

# Candle (native inference)
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"

# Audio processing
hound = "3.5"
symphonia = "0.5"
rubato = "0.15"
rustfft = "6.2"

# MLX bindings (Apple Silicon ML framework)
# Note: mlx-rs is still experimental, we'll use FFI bindings
# mlx-rs = { git = "https://github.com/oxideai/mlx-rs" }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.9"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"

# Configuration
config = "0.14"
