[package]
name = "izwi-core"
description = "Core TTS inference engine for Qwen3-TTS models on Apple Silicon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

hf-hub = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

hound = { workspace = true }
rubato = { workspace = true }
rustfft = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

# Note: Direct Metal access via objc2-metal is available if needed.
# Currently all Metal functionality is provided through Candle's abstraction.
# To use objc2-metal directly in the future, add:
# [target.'cfg(target_os = "macos")'.dependencies]
# objc2-metal = "0.3"
# objc2-foundation = "0.3"

[dev-dependencies]
tokio-test = "0.4"
